Change size of skills, hide navbar on mobile, bug fixes

--- a/src/components/experience/exp.css
+++ b/src/components/experience/exp.css
@@ -22,12 +22,18 @@
   margin: 0 auto;
 }
 
+/* .job-title {
+  padding-left: 1%;
+  padding-right: 1%;
+} */
+
 .flex-row {
   width: calc(100% / 3);
+  flex-wrap: nowrap;
   text-align: left;
-  padding: 0.5em 0.5em;
+  padding-right: 10vh;
 }
 
-.text {
-  /* width: @text-width; */
+.dates {
+  text-align: right;
 }
